rename InteractionHolder to ComponentHolder