@@ -8,6 +8,18 @@ compileJava {
     options.compilerArgs += ['--enable-preview']
 }
 
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs += "--enable-preview"
+}
+
+tasks.withType(Test).configureEach {
+    jvmArgs += "--enable-preview"
+}
+
+tasks.withType(JavaExec).configureEach {
+    jvmArgs += "--enable-preview"
+}
+
 repositories {
     mavenCentral()
     maven { url 'https://jitpack.io' }
